2004-07-15  Ted Gould  <ted@gould.cx>

	* 0.39 Release

2004-07-14  MenTaLguY  <mental@rydia.net>

	* src/sp-object.cpp: disable recursive update warning for release

	* src/select-context.cpp: work around probable cut-and-paste bug
	  between sp_select_context_item_handler and
	  sp_select_context_root_handler by checking for drag_escaped

2004-07-13  MenTaLguY  <mental@rydia.net>

	* src/make.exclude: omit extension/script/js/js.c from build

2004-07-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/rdf.cpp: Don't add dc:description entry to SVG files.

	* src/utest/utest.h: Add include guard.

2004-07-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/decimal-round.h (decimal_round): New file, new function.
	* src/round.h (decimal_round): New file, new function.
	* src/Makefile_insert: Add to libinkpost_a_SOURCES.

2004-07-11  MenTaLguY  <mental@rydia.net>

	* src/document.h, src/document-undo.cpp:
	  added sp_document_get_undo_sensitive() for capturing and restoring
	  undo sensitivity

	* src/sp-object.cpp: don't log id changes made to resolve
	  duplicate ids (to avoid undo badness) (fix for bug #989023)

2004-07-11  Kees Cook  <kees@outflux.net>

	* src/preferences-skeleton.h, src/extension/init.cpp: with simarilius,
	  tracked down the cause of bug #988445.  Extension code now has a
	  small section that validates preferences for valid extension names.
	* src/dialogs/filedialog-win32.cpp: corrected an assert test, and
	  changed dialog to take the passed window title.
	* autogen.sh, config.h.mingw, configure.in, src/Makefile_insert,
	  src/help.cpp, src/inkscape-stock.cpp, src/inkscape.cpp, src/main.cpp,
	  src/make.dep, src/make.files, src/path-prefix.h, src/prefix.cpp,
	  src/prefix.h, src/dialogs/stroke-style.cpp,
	  src/extension/Makefile_insert, src/extension/init.cpp,
	  src/extension/implementation/Makefile_insert,
	  src/extension/implementation/script.cpp,