@@ -151,6 +151,7 @@ public:
 
 SPAction *sp_verb_get_action (sp_verb_t verb, SPView *view);
 sp_verb_t sp_verb_register (SPVerbActionFactory *factory);
+sp_verb_t sp_verb_find (const char * name);
 
 gchar *sp_action_get_title (const SPAction *action);
 
